add shopping_list template

--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <ul>
-    {% for x in myproducts %}
-        <li>{{ x.product_name }} {{ x.quantity }}</li>
+    {% for x in my_products %}
+        <li>{{ x.product_name }}</li>
     {% endfor %}
 </ul>
 </body>
