show shopping lists

--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -6,7 +6,7 @@
 <body>
 <ul>
     {% for x in my_shopping_lists %}
-        <li>{{ x.shopping_name}}</li>
+        <li>{{ x.lists_name }}</li>
     {% endfor %}
 </ul>
 </body>
