--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 <ul>
-    {% for x in my_shopping_lists %}
-        <li>{{ x.lists_name }}</li>
-    {% endfor %}
+    <li>{{ my_shopping_lists.lists_name }}</li>
 </ul>
 </body>
 </html>
