--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <ul>
-    <li>{{ my_shopping_lists.lists_name }}</li>
+    <li><a href="details/{{ my_shopping_lists.lists_name }}"></a></li>
 </ul>
 </body>
 </html>
