--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> {{ my_shopping_lists.lists_name }}</h1>
+<h1> {{ my_shopping_list.lists_name }}</h1>
 <ul>
-    {% for x in my_shopping_lists %}}
-        <li>{{ x.product_name }}</li>
-    {% endfor %}
+    <li>{% for x in my_shopping_list.lists_name %}
+            {{ x.product_name }}
+        {% endfor %}
+    </li>
 </ul>
-<p>Back to <a href="/shopping_list">All Shopping List</a></p>
+<p>Powrót do <a href="/shopping_list">list zakupów</a></p>
 </body>
 </html>
