--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> {{ my_shopping_list.lists_name }}</h1>
+<h1> {{ shoppinglists }} </h1>
 <ul>
     {% for x in my_shopping_list %}
         <li>{{ x.product_name }}</li>
