--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -3,9 +3,7 @@
 <body>
 <h1> {{ shoppinglists }} </h1>
 <ul>
-    {% for x in my_shopping_list %}
-        <li>{{ x.product_name }}</li>
-    {% endfor %}
+    {{ "Tutaj powinny się pojawiać produkty w tej liście" }}
 </ul>
 <p>Powrót do <a href="/shopping_list">list zakupów</a></p>
 </body>
