--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> {{ shoppinglists }} </h1>
+<h1> {{ my_shopping_list }} </h1>
+<p> Produkty </p>
 <ul>
-    {{ "Tutaj powinny się pojawiać produkty w tej liście" }}
+
 </ul>
 <p>Powrót do <a href="/shopping_list">list zakupów</a></p>
 </body>
 </html>
+
