add href to all_shopping_lists

--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -18,5 +18,9 @@
     </tr>
 </ul>
 {% endfor %}
+<ul>
+    <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
+    <li><a href="{% url 'products' %}">Produkty</a></li>
+</ul>
 </body>
 </html>
