add href to all_products

--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -9,5 +9,9 @@
         <li>{{ x.product_name }}</li>
     {% endfor %}
 </ul>
+<ul>
+    <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
+    <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
+</ul>
 </body>
 </html>
