change main and list_details template

--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -6,7 +6,8 @@
 <ul>
 
 </ul>
-<p>Powrót do <a href="/shopping_list">list zakupów</a></p>
+    <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
+    <li><a href="{% url 'shopping_list' %}">Powrót do list zakupów</a></li>
 </body>
 </html>
 
