--- a/products/templates/main.html
+++ b/products/templates/main.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <ul>
+    <li>Stwórz nową listę zakupów</li>
     <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
     <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
 </ul>
