list detail view

--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -6,7 +6,7 @@
 <body>
 <ul>
     {% for x in my_products %}
-        <li>{{ x.product_name }}</li>
+        <li>{{ x.product_name }} {{ x.quantity }}</li>
     {% endfor %}
 </ul>
 <ul>
