--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -3,17 +3,15 @@
 <body>
 <h1> {{ shoppinglists.lists_name }} </h1>
 <p> Produkty </p>
-<p>{{ object.products }}</p>
 <ul>
-{% for products in object_list %}
+{% for products in products_list %}
     <li>{{ products.product_name }}</li>
 {% empty %}
     <li>Brak produktów</li>
 {% endfor %}
 </ul>
-<p> {{ products_list }}</p>
-<li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
 <li><a href="{% url 'shopping_list' %}">Powrót do list zakupów</a></li>
+<li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
 </body>
 </html>
 
