add ShoppingListCreate (class, views, template)

--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1> {{ shoppinglists.lists_name }} </h1>
-<p> Produkty </p>
+<p> Produkty: </p>
 <ul>
 {% for products in products_list %}
     <li>{{ products.product_name }}</li>
