--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -12,6 +12,7 @@
 <ul>
     <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
     <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
+    <li><a href="{% url 'shopping_list_create' %}">Stwórz nową listę zakupów</a></li>
 </ul>
 </body>
 </html>
