--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -12,6 +12,7 @@
 </ul>
 <li><a href="{% url 'shopping_list' %}">Powrót do list zakupów</a></li>
 <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
+<li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
 </body>
 </html>
 
