--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -20,7 +20,7 @@
 {% endfor %}
 <ul>
     <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
-    <li><a href="{% url 'shopping_list_create' %}">Stwórz nową listę zakupów</a></li>
+    <li><a href="{% url 'create' %}">Stwórz nową listę zakupów</a></li>
     <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
 </ul>
 </body>
