--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -10,6 +10,7 @@
     <li>Brak produktów</li>
 {% endfor %}
 </ul>
+<li><a href="{% url 'change' shoppinglists.id %}">Edycja listy</a></li>
 <li><a href="{% url 'shopping_list' %}">Powrót do list zakupów</a></li>
 <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
 <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
