edit template for changing list

--- a/products/templates/shopping_list_change.html
+++ b/products/templates/shopping_list_change.html
@@ -3,15 +3,15 @@
     <title>Edycja listy zakupow </title>
 </head>
 <body>
-<h1>Edycja listy zakupów: {{ shoppinglist.lists_name }} </h1>
+<h1>Edycja listy zakupów: "{{ shoppinglist.lists_name }}"</h1>
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Zapisz zmiany">
 </form>
 <form action="{% url 'details' shoppinglist.id %}">
-                 {% csrf_token %}
-                <input type="submit" value="Anuluj zmiany">
+    {% csrf_token %}
+    <input type="submit" value="Anuluj zmiany">
 </form>
 </body>
 </html>
