--- a/products/templates/new_shopping_list.html
+++ b/products/templates/new_shopping_list.html
@@ -9,6 +9,10 @@
     {{ form.as_p }}
     <input type="submit" value="Dodaj">
 </form>
+<form action="{% url 'shopping_list' %}">
+    {% csrf_token %}
+    <input type="submit" value="Anuluj">
+</form>
 <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
 <li><a href="{% url 'shopping_list' %}">Przejdź do wszystkich list</a></li>
 <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
