--- a/products/templates/product_change.html
+++ b/products/templates/product_change.html
@@ -3,7 +3,7 @@
     <title>Edycja produktu</title>
 </head>
 <body>
-<h1>Produkt do edycji: "{{ products.product_name }}"</h1>
+<h1>Edytowany produkt: "{{ products.product_name }}"</h1>
 <form action="{% url 'products' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
