--- a/products/templates/shopping_list_change.html
+++ b/products/templates/shopping_list_change.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <head>
     <title>Edycja listy zakupow </title>
 </head>
@@ -16,4 +19,4 @@
     <input type="submit" value="Anuluj zmiany">
 </form>
 </body>
-</html>
+{% endblock content %}
