--- a/products/templates/snippets/header.html
+++ b/products/templates/snippets/header.html
@@ -11,11 +11,10 @@
             <nav>
                 {% if request.user.is_authenticated %}
                     <div class="d-flex align-items-center p-2">
-                        <a class="btn btn-outline-primary ml-2" href="#">Konto</a>
-                        <a class="btn btn-outline-primary ml-2" href="#">Wyloguj się</a>
+                        <a class="btn btn-outline-primary ml-2" href="{% url 'logout' %}">Wyloguj się</a>
                     </div>
                 {% else %}
-                    <a class="p-2 text-dark" href="#">Zaloguj się</a>
+                    <a class="p-2 text-dark" href="{% url 'login' %}">Zaloguj się</a>
                     <a class="btn btn-outline-primary" href="{% url 'register' %}">Zarejestruj się</a>
                 {% endif %}
             </nav>
@@ -31,11 +30,10 @@
             <nav class="">
                 {% if request.user.is_authenticated %}
                     <div class="d-flex align-items-center p-2">
-                        <a class="btn btn-outline-primary ml-2" href="{% url 'register' %}">Konto</a>
-                        <a class="btn btn-outline-primary ml-2" href="{% url 'register' %}">Wyloguj się</a>
+                        <a class="btn btn-outline-primary ml-2" href="{% url 'logout' %}">Wyloguj się</a>
                     </div>
                 {% else %}
-                    <a class="p-2 text-dark" href="{% url 'register' %}">Zaloguj się</a>
+                    <a class="p-2 text-dark" href="{% url 'login' %}">Zaloguj się</a>
                     <a class="btn btn-outline-primary" href="{% url 'register' %}">Zarejestruj się</a>
                 {% endif %}
             </nav>
