--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -18,12 +18,6 @@
     border-bottom-left-radius: 0;
     }
 
-    .form-signin input[type="text"] {
-    margin-bottom: 10px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    }
-
     .form-signin input[type="password"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
@@ -36,34 +30,35 @@
     <div class="row justify-content-center">
         <div class="card card-signin">
             <div class="card-body">
-                <form class="form-sign" method="post">{% csrf_token %}
-                    <div class="d-flex flex-column -pb-3">
+                <form class="form-signin" method="post">{% csrf_token %}
+                    <div class="d-flex flex-column pb-3">
                         <img class="img-fluid mx-auto d-block" src="{% static 'image/logo.png' %}" alt="logo"
                         width="72" height="72">
                     </div>
                     <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Adres e-mail"
                     required autofocus>
-                    <input type="text" name="username" id="inputUsername" class="form-control"
-                           placeholder="Nazwa użytkownika" required>
-                    <input type="password" name="password" id="inputPassword1" class="form-control" placeholder="Hasło"
+                    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Hasło"
                     required>
-                    <input type="password" name="password2" id="inputPassword2" class="form-control"
-                           placeholder="Potwierdź hasło" required>
                     <br>
 
-                    {% for field in registration_form %}
+                    {% for field in login_form %}
                         {% for error in field.errors %}
                         <p style="color: red">{{ error }}</p>
                         {% endfor %}
                     {% endfor %}
-                    {% if registration_form.non_field_errors %}
+                    {% if login_form.non_field_errors %}
                     <div style="color: red">
-                        <p>{{ registration_form.non_field_errors }}</p>
+                        <p>{{ login_form.non_field_errors }}</p>
                     </div>
                     {% endif %}
-
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Zarejestruj się</button>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Zaloguj się</button>
                 </form>
+
+                <div>
+                    <div class="d-flex flex-column my-4">
+                        <a class="m-auto" href="#">Resetuj hasło</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
