--- a/products/templates/delete_confirmation_page_list.html
+++ b/products/templates/delete_confirmation_page_list.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Jestes pewny?</title>
-</head>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <body>
 <h1>Jesteś pewny, że chcesz usunąć listę: "{{ shoppinglist.lists_name }}"?</h1>
 <form action="" method="post">
@@ -14,4 +14,5 @@
     <input type="submit" value="Nie, wróć do listy">
 </form>
 </body>
-</html>
+
+{% endblock content %}
