--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <body>
 <h1> {{ shoppinglists.lists_name }} </h1>
 
@@ -22,5 +25,6 @@
 <li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
 <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
 </body>
-</html>
+
+{% endblock content %}
 
