--- a/products/templates/new_product.html
+++ b/products/templates/new_product.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <head>
     <title>Stwórz nowy produkt</title>
 </head>
@@ -15,4 +18,5 @@
 </form>
 
 </body>
-</html>
+
+{% endblock content %}
