--- a/products/templates/new_shopping_list.html
+++ b/products/templates/new_shopping_list.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <head>
     <title>Stwórz nową listę</title>
     <h1>Stwórz nową listę!</h1>
@@ -19,4 +22,5 @@
 <li><a href="{% url 'shopping_list' %}">Przejdź do wszystkich list</a></li>
 <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
 </body>
-</html>
+
+{% endblock content %}
