--- a/products/templates/product_change.html
+++ b/products/templates/product_change.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <head>
     <title>Edycja produktu</title>
 </head>
@@ -15,4 +18,5 @@
     <input type="submit" value="Anuluj zmiany">
 </form>
 </body>
-</html>
+
+{% endblock content %}
