--- a/products/templates/delete_confirmation_page_list.html
+++ b/products/templates/delete_confirmation_page_list.html
@@ -3,16 +3,35 @@
 
 {% block content %}
 
+<style type="text/css">
+    .my-grid{
+    }
+    .card-signin {
+    width: 100%;
+    max-width: 1000px;
+    padding: 15px;
+    margin: auto;
+    }
+</style>
+
 <body>
-<h1>Jesteś pewny, że chcesz usunąć listę: "{{ shoppinglist.lists_name }}"?</h1>
-<form action="" method="post">
-    {% csrf_token %}
-    <input type="submit" value="Tak, usuń listę">
-</form>
-<form action="{% url 'details' shoppinglist.id %}">
-    {% csrf_token %}
-    <input type="submit" value="Nie, wróć do listy">
-</form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="card card-signin">
+            <div class="card-body">
+                <h1>Jesteś pewny, że chcesz usunąć listę: "{{ shoppinglist.lists_name }}"?</h1>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <input type="submit" value="Tak, usuń listę">
+                </form>
+                <form action="{% url 'details' shoppinglist.id %}">
+                    {% csrf_token %}
+                    <input type="submit" value="Nie, wróć do listy">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 {% endblock content %}
