--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -3,27 +3,47 @@
 
 {% block content %}
 
+<style type="text/css">
+    .my-grid{
+    }
+    .card-signin {
+    width: 100%;
+    max-width: 600px;
+    padding: 15px;
+    margin: auto;
+    }
+</style>
+
 <body>
-<h1> {{ shoppinglists.lists_name }} </h1>
 
-<table>
-    <tr>
-        <th>Produkty:</th>
-    </tr>
-    {% for product in products_list %}
-    <tr>
-        <td>{{ product.product_name }}</td>
-    </tr>
-    {% empty %}
-    <li>Brak produktów</li>
-    {% endfor %}
-</table>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="card card-signin">
+            <div class="card-body">
+                <h1> {{ shoppinglists.lists_name }} </h1>
 
-<li><a href="{% url 'change' shoppinglists.id %}">Edycja listy</a></li>
-<li><a href="{% url 'delete' shoppinglists.id %}">Usuń listę</a></li>
-<li><a href="{% url 'shopping_list' %}">Powrót do list zakupów</a></li>
-<li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
-<li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
+                <table>
+                    <tr>
+                        <th>Produkty:</th>
+                    </tr>
+                    {% for product in products_list %}
+                    <tr>
+                        <td>{{ product.product_name }}</td>
+                    </tr>
+                    {% empty %}
+                    <li>Brak produktów</li>
+                    {% endfor %}
+                </table>
+                <ul>
+                    <li><a href="{% url 'change' shoppinglists.id %}">Edycja listy</a></li>
+                    <li><a href="{% url 'delete' shoppinglists.id %}">Usuń listę</a></li>
+                    <li><a href="{% url 'shopping_list' %}">Powrót do list zakupów</a></li>
+                    <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 {% endblock content %}
