--- a/products/templates/main.html
+++ b/products/templates/main.html
@@ -4,23 +4,32 @@
 
 <style type="text/css">
     .my-grid{
-
     }
-
+    .card-signin {
+    width: 100%;
+    max-width: 600px;
+    padding: 15px;
+    margin: auto;
+    }
 </style>
 
 <html>
-<head>
-    <h1>Katalog list zakupów</h1>
-</head>
+
 <body>
 <div class="container">
-    <div class="my.grid d-flex flex-column">
-        <ul>
-            <li><a href="{% url 'create' %}">Stwórz nową listę zakupów</a></li>
-            <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
-            <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
-        </ul>
+    <div class="row justify-content-center">
+        <div class="card card-signin">
+            <div class="card-body">
+                <div class="my.grid d-flex flex-column">
+                    <h1>Katalog list zakupów</h1>
+                    <ul>
+                        <li><a href="{% url 'create' %}">Stwórz nową listę zakupów</a></li>
+                        <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
+                        <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
