--- a/products/templates/new_product.html
+++ b/products/templates/new_product.html
@@ -3,19 +3,36 @@
 
 {% block content %}
 
-<head>
-    <title>Stwórz nowy produkt</title>
-</head>
+<style type="text/css">
+    .my-grid{
+    }
+    .card-signin {
+    width: 100%;
+    max-width: 600px;
+    padding: 15px;
+    margin: auto;
+    }
+</style>
+
 <body>
-<form action="" method="post" novalidate>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Dodaj">
-</form>
-<form action="{% url 'products' %}">
-    {% csrf_token %}
-    <input type="submit" value="Anuluj">
-</form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="card card-signin">
+            <div class="card-body">
+                <h1>Stwórz nowy produkt!</h1>
+                <form action="" method="post" novalidate>
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Dodaj">
+                </form>
+                <form action="{% url 'products' %}">
+                    {% csrf_token %}
+                    <input type="submit" value="Anuluj">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 
