--- a/products/templates/new_shopping_list.html
+++ b/products/templates/new_shopping_list.html
@@ -3,24 +3,42 @@
 
 {% block content %}
 
-<head>
-    <title>Stwórz nową listę</title>
-    <h1>Stwórz nową listę!</h1>
-</head>
+<style type="text/css">
+    .my-grid{
+    }
+    .card-signin {
+    width: 100%;
+    max-width: 600px;
+    padding: 15px;
+    margin: auto;
+    }
+</style>
+
 <body>
-<p>Dodaj produkty, a ilość skonfigurujesz na następnej stronie.</p>
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Dodaj">
-</form>
-<form action="{% url 'shopping_list' %}">
-    {% csrf_token %}
-    <input type="submit" value="Anuluj">
-</form>
-<li><a href="{% url 'main' %}">Powrót do strony głównej</a></li>
-<li><a href="{% url 'shopping_list' %}">Przejdź do wszystkich list</a></li>
-<li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="card card-signin">
+            <div class="card-body">
+                <h1>Stwórz nową listę!</h1>
+                <p>Dodaj produkty, a ilość skonfigurujesz na następnej stronie.</p>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Dodaj">
+                </form>
+                <form action="{% url 'shopping_list' %}">
+                    {% csrf_token %}
+                    <input type="submit" value="Anuluj">
+                </form>
+                <ul>
+                    <li><a href="{% url 'shopping_list' %}">Przejdź do wszystkich list</a></li>
+                    <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
+                    <li><a href="{% url 'product_create' %}">Dodaj nowy produkt</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 {% endblock content %}
