--- a/products/templates/shopping_list_change.html
+++ b/products/templates/shopping_list_change.html
@@ -3,20 +3,37 @@
 
 {% block content %}
 
-<head>
-    <title>Edycja listy zakupow </title>
-</head>
+<style type="text/css">
+    .my-grid{
+    }
+    .card-signin {
+    width: 100%;
+    max-width: 600px;
+    padding: 15px;
+    margin: auto;
+    }
+</style>
+
 <body>
-<h1>Edycja listy zakupów: "{{ shoppinglist.lists_name }}"</h1>
-<p>Zmień produkty, jakie znajdują się na liście: </p>
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Zapisz zmiany">
-</form>
-<form action="{% url 'details' shoppinglist.id %}">
-    {% csrf_token %}
-    <input type="submit" value="Anuluj zmiany">
-</form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="card card-signin">
+            <div class="card-body">
+                <h1>Edycja listy zakupów: "{{ shoppinglist.lists_name }}"</h1>
+                <p>Zmień nazwę lub produkty, jakie znajdują się na liście:</p>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Zapisz zmiany">
+                </form>
+                <form action="{% url 'details' shoppinglist.id %}">
+                    {% csrf_token %}
+                    <input type="submit" value="Anuluj zmiany">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+
 {% endblock content %}
