--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 
-    <title>Katalog-List-Zakupow</title>
+    <title>Kreator-List-Zakupow</title>
 </head>
 <body>
 <!-- header -->
