--- a/products/templates/main.html
+++ b/products/templates/main.html
@@ -21,7 +21,7 @@
         <div class="card card-signin">
             <div class="card-body">
                 <div class="my.grid d-flex flex-column">
-                    <h1>Katalog list zakupów</h1>
+                    <h1>Kreator list zakupów</h1>
                     <ul>
                         <li><a href="{% url 'create' %}">Stwórz nową listę zakupów</a></li>
                         <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
