--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -45,16 +45,16 @@
                     required autofocus>
                     <input type="text" name="username" id="inputUsername" class="form-control"
                            placeholder="Nazwa użytkownika" required>
-                    <input type="password" name="password" id="inputPassword1" class="form-control" placeholder="Hasło"
+                    <input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Hasło"
                     required>
                     <input type="password" name="password2" id="inputPassword2" class="form-control"
                            placeholder="Potwierdź hasło" required>
                     <br>
 
                     {% for field in registration_form %}
-                        {% for error in field.errors %}
-                        <p style="color: red">{{ error }}</p>
-                        {% endfor %}
+                    {% for error in field.errors %}
+                    <p style="color: red">{{ error }}</p>
+                    {% endfor %}
                     {% endfor %}
                     {% if registration_form.non_field_errors %}
                     <div style="color: red">
