--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -15,6 +15,13 @@
     margin: auto;
     }
 
+    .card-navigate {
+    width: 100%;
+    max-width: 800px;
+    padding: 15px;
+    margin: auto;
+    }
+
 </STYLE>
 
 <body>
@@ -48,6 +55,15 @@
                     {% endfor %}
                 </ul>
                 <button><a href="{% url 'product_create' %}">Dodaj nowy produkt</a></button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="card card-navigate">
+            <div class="card-body">
                 <ul>
                     <li><a href="{% url 'shopping_list' %}">Wszystkie listy zakupów</a></li>
                     <li><a href="{% url 'create' %}">Stwórz nową listę zakupów</a></li>
@@ -56,6 +72,7 @@
         </div>
     </div>
 </div>
+
 </body>
 
 {% endblock content %}
