--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -12,6 +12,14 @@
     padding: 15px;
     margin: auto;
     }
+
+    .card-navigate {
+    width: 100%;
+    max-width: 800px;
+    padding: 15px;
+    margin: auto;
+    }
+
 </style>
 
 
@@ -41,6 +49,15 @@
                     {% endfor %}
                 </table>
 
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="card card-navigate">
+            <div class="card-body">
                 <ul>
                     <li><a href="{% url 'create' %}">Stwórz nową listę zakupów</a></li>
                     <li><a href="{% url 'products' %}">Wszystkie dostępne produkty</a></li>
@@ -49,6 +66,7 @@
         </div>
     </div>
 </div>
+
 </body>
 
 {% endblock content %}
