--- a/products/templates/all_products.html
+++ b/products/templates/all_products.html
@@ -29,7 +29,7 @@
     <div class="row justify-content-center">
         <div class="card card-signin">
             <div class="card-body">
-                <h1>Moje produkty</h1>
+                <h1>Dostępne produkty</h1>
                 <p>_______________________________________________________</p>
                 <p>Wyszukaj produkt: </p>
                 <form action="{% url 'products' %}" method="POST">
