--- a/products/templates/delete_confirmation_page_list.html
+++ b/products/templates/delete_confirmation_page_list.html
@@ -6,7 +6,7 @@
 <style type="text/css">
     .my-grid{
     }
-    .card-signin {
+    .card-conf {
     width: 100%;
     max-width: 1000px;
     padding: 15px;
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="card card-signin">
+        <div class="card card-conf">
             <div class="card-body">
                 <h1>Jesteś pewny, że chcesz usunąć listę: "{{ shoppinglist.lists_name }}"?</h1>
                 <form action="" method="post">
