--- a/products/templates/list_details.html
+++ b/products/templates/list_details.html
@@ -6,7 +6,7 @@
 <style type="text/css">
     .my-grid{
     }
-    .card-signin {
+    .card-main {
     width: 100%;
     max-width: 600px;
     padding: 15px;
@@ -40,7 +40,7 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="card card-signin">
+        <div class="card card-main">
             <div class="card-body">
                 <h1> {{ shoppinglists.lists_name }} </h1>
 
