--- a/products/templates/new_shopping_list.html
+++ b/products/templates/new_shopping_list.html
@@ -6,7 +6,7 @@
 <style type="text/css">
     .my-grid{
     }
-    .card-signin {
+    .card-main {
     width: 100%;
     max-width: 600px;
     padding: 15px;
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="card card-signin">
+        <div class="card card-main">
             <div class="card-body">
                 <h1>Stwórz nową listę!</h1>
                 <p>Dodaj produkty, a ilość skonfigurujesz na następnej stronie.</p>
