--- a/products/templates/all_shopping_lists.html
+++ b/products/templates/all_shopping_lists.html
@@ -6,7 +6,7 @@
 <style type="text/css">
     .my-grid{
     }
-    .card-signin {
+    .card-main {
     width: 100%;
     max-width: 600px;
     padding: 15px;
@@ -27,7 +27,7 @@
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="card card-signin">
+        <div class="card card-main">
             <div class="card-body">
                 <h1>Moje listy zakupów.</h1>
                 <table>
