--- a/products/templates/main.html
+++ b/products/templates/main.html
@@ -5,7 +5,7 @@
 <style type="text/css">
     .my-grid{
     }
-    .card-signin {
+    .card-main {
     width: 100%;
     max-width: 600px;
     padding: 15px;
@@ -18,7 +18,7 @@
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="card card-signin">
+        <div class="card card-main">
             <div class="card-body">
                 <div class="my.grid d-flex flex-column">
                     <h1>Kreator list zakupów</h1>
