--- a/products/templates/product_change.html
+++ b/products/templates/product_change.html
@@ -6,7 +6,7 @@
 <style type="text/css">
     .my-grid{
     }
-    .card-signin {
+    .card-main {
     width: 100%;
     max-width: 600px;
     padding: 15px;
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="card card-signin">
+        <div class="card card-main">
             <div class="card-body">
                 <h1>Edytowany produkt: "{{ products.product_name }}"</h1>
                 <form action="{% url 'products' %}" method="post">
