--- a/products/templates/product_change.html
+++ b/products/templates/product_change.html
@@ -20,7 +20,7 @@
         <div class="card card-main">
             <div class="card-body">
                 <h1>Edytowany produkt: "{{ products.product_name }}"</h1>
-                <form action="{% url 'products' %}" method="post">
+                <form action="" method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" value="Zapisz zmiany">
